--- a/style/style.css
+++ b/style/style.css
@@ -57,7 +57,7 @@ nav .menu {
     background: white;
 }
 .img{
-    background: url('../src/foto\ imagen.jpg') no-repeat;
+    background: url('../src1/foto\ imagen.jpg') no-repeat;
     width: 100%;
     height: 100vh;
     background-size: cover;
